--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ var myBackground;
 
 function startGame() {
     myGamePiece = new component(30, 30, "smiley.gif", 10, 120, "image");
-    myBackground = new component(656, 270, "citymarket.jpg", 0, 0, "background");
+    myBackground = new component(656, 270, "https://raw.githubusercontent.com/SONICIO/Game/master/bg.png", 0, 0, "background");
     myGameArea.start();
 }
 
